--- a/web/static/package.json
+++ b/web/static/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "build:prod": "npm run build && npm run copy-files",
-    "copy-files": "copy dist\\index.html .\\index.html && copy dist\\style.css .\\style.css && copy dist\\app.js .\\app.js && rmdir /s /q dist",
+    "build:prod": "npm run build",
     "preview": "vite preview",
     "type-check": "tsc --noEmit"
   },
